added subsections on feature scaling in Step 4

--- a/literature/notebook.bib
+++ b/literature/notebook.bib
@@ -708,4 +708,24 @@ Als Rechtsfolge eines "wandelbaren Produkts" wird ein angepasstes "Produktbeglei
   keywords = {URL},
 }
 
+@Online{feature_scaling_2020,
+  author   = {Aniruddha Bhandari},
+  date     = {2020-04-03},
+  title    = {Feature Scaling for Machine Learning: Understanding the Difference Between Normalization vs. Standardization},
+  url      = {https://www.analyticsvidhya.com/blog/2020/04/feature-scaling-machine-learning-normalization-standardization/},
+  language = {English},
+  urldate  = {2022-10-09},
+  keywords = {URL},
+}
+
+@Online{techflare_2020,
+  organization = {techflare},
+  date     = {2020-11-12},
+  title    = {What are standarization and normalization? Test with iris data set in Scikit-learn},
+  url      = {http://techflare.blog/what-are-standarization-and-normalization-test-with-iris-data-set-in-scikit-learn/},
+  language = {English},
+  urldate  = {2022-10-09},
+  keywords = {URL},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
